# thermal_bridge

./: .gitignore  README.md  __main__.py  pyproject.toml  requirements.txt
data/: psi_data.enc  psi_data.json  thermal_bridge_44er.csv
src/: __init__.py  utils.py
src/berroutils/: __init__.py
src/berroutils/container/: list_of_dict_container.py
src/thermal_bridge/: app.py  dash_app.py  import_data.py  index.py  initialize.py  psi_data.py
src/thermal_bridge/tabs/: tab_psi_search.py
test/: conftest.py  test_psi.py  test_utils.py
test/test_data/: test_origin.csv  test_psi_data.json  test_thermal_bridge.csv
