[project]
name = "thermal-bridge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.3.5",
    "streamlit>=1.44.0",
    "watchdog>=6.0.0",
    "pandas>=2.2.3",
    "berroutils>=0.0.1",
    "dash>=3.0.2",
    "dash-bootstrap-components>=2.0.0",
    "dash-auth>=2.3.0",
]
