[project]
name = "thermal-bridge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.44.0",
    "watchdog>=6.0.0",
    "pandas>=2.2.3",
    "berroutils>=0.1.0",
    "streamlit-aggrid>=1.1.4.post1",
]

[dependency-groups]
dev = [
    "ollama>=0.5.0",
    "openai>=1.82.1",
    "prompt-toolkit>=3.0.51",
    "pytest>=8.3.5",
]
